updated logo/home icon

--- a/app/views/mainpage/_navbar.html.erb
+++ b/app/views/mainpage/_navbar.html.erb
@@ -10,7 +10,7 @@
       </button>
       <p class="navbar-brand">
         <%= link_to root_path, :class => "navbar-link" do %>
-        <%= image_tag "WTB4.png" %>
+          <%= image_tag "building3.png", class: "icon" %>
         <% end %>
       </p>
     </div>
