--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid plans">
-  <div class="row">
-    <div class="col-xs col-md-6 blue">
+  <div class="row is-flex">
+    <div class="col-xs-6 blue">
       <div class="container">
         <div class="row display-flex">
           <div class="col-sm-10 col-md-4 building-tops">
@@ -14,7 +14,7 @@
         <p><%= @building.description %></p>
       </div>
     </div>
-    <div class="col-xs col-md-6 red">
+    <div class="col-xs-6 red">
       <div class="nameme">
         <h1><%= @building.name %></h1>
       </div>
