more navbar CSS adjustments

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,7 +27,7 @@ body {
 #custom-nav {
   color: orange;
   height: 70px;
-  background-color: rgba(44, 189, 154, .8);
+  background-color: rgba(44, 189, 154, .75);
   border: 0;
   box-shadow: none;
   z-index: 999;
@@ -40,7 +40,7 @@ body {
 
 #custom-nav a {
   color: orange;
-  text-shadow: 2px 1px rgb(77, 77, 77);
+  text-shadow: 2px 2px 1px rgb(77, 77, 77);
 }
 
 #custom-nav .dropdown-menu {
