--- a/app/views/mainpage/_cards.html.erb
+++ b/app/views/mainpage/_cards.html.erb
@@ -2,7 +2,7 @@
   <div class="row display-flex">
     <div class="col-xs-10 col-md-4">
       <div class="thumbnail">
-          <%= image_tag(@buildings[0].main_photo, style: 'height:92%; width:100%;') %>
+          <%= link_to(image_tag(@buildings[0].main_photo, style: 'height:92%; width:100%;'), building_path(@buildings[0].id)) %>
           <div class="caption">
             <p> <%= link_to @buildings[0].name, building_path(@buildings[0].id) %> </p>
           </div>
