error msgs now show below navbar

--- a/app/views/mainpage/_navbar.html.erb
+++ b/app/views/mainpage/_navbar.html.erb
@@ -37,4 +37,9 @@
       <% end %>
     </div>
   </div>
+  <div class="message">
+    <% flash.each do |name, msg| %>
+      <strong><%= name %>: <%= msg %></strong>
+    <% end %>
+  </div>
 </nav>
