--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -287,7 +287,7 @@ body {
  flash messages
 ******************/
 .message {
-  background: orangered;
+  background: #C924A6;
   font-size: 20px;
   font-weight: bold;
   text-align: center;
