--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,6 +26,8 @@ body {
 
 #custom-nav {
   color: orange;
+  font-weight: bold;
+  text-shadow: 2px 2px 3px rgb(77, 77, 77);
   height: 70px;
   background-color: rgba(44, 189, 154, .75);
   border: 0;
@@ -40,7 +42,8 @@ body {
 
 #custom-nav a {
   color: orange;
-  text-shadow: 2px 2px 1px rgb(77, 77, 77);
+  font-weight: bold;
+  text-shadow: 2px 2px 3px rgb(77, 77, 77);
 }
 
 #custom-nav .dropdown-menu {
@@ -63,6 +66,8 @@ body {
 
 #custom-nav.affix {
   color: orange;
+  font-weight: bold;
+  text-shadow: 2px 2px 1px rgb(77, 77, 77);
   top: 0;
   min-width: 100%;
   background-color: rgb(44, 189, 154);
