--- a/app/views/mainpage/_jumbotron.html.erb
+++ b/app/views/mainpage/_jumbotron.html.erb
@@ -1,4 +1,4 @@
   <div class="jumbotron">
     <h1>What's that building?</h1>
-    <p>A one stop shop for all things building.</p>
+    <p>Share your stories.</p>
   </div>
