made card partial for building show page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -142,6 +142,10 @@ body {
   vertical-align: middle;
 }
 
+.thumbnail-show {
+  margin-top: 80px;
+}
+
 /****************
   forms styling
 *****************/
