--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -3,11 +3,7 @@
     <div class="col-xs-6 blue">
       <div class="container">
         <div class="row display-flex">
-          <div class="col-sm-10 col-md-4 building-tops">
-            <div class="thumbnail">
-              <%= image_tag(@building.main_photo)%>
-            </div>
-          </div>
+          <%= render :partial => "buildings/card" %>
         </div>
       </div>
       <div class="buildfacts">
