fixed New Story form formatting

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -183,6 +183,20 @@ body {
   float: left;
 }
 
+.file-upload-field {
+  background-color: white;
+  color: black;
+  margin: 8px 0 8px 0;
+}
+
+.sub {
+  margin: 2px;
+}
+
+.back {
+  margin: 2px;
+}
+
 /**********************************
  CSS for stories on building page
 ***********************************/
