--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -11,13 +11,11 @@
     </div>
       <%= render partial: '/stories/form', object: form %>
       <%= form.hidden_field :user_id, :value => "#{current_user.id}" %>
-      <div class = "photo-btn">
-          <%= form.file_field :img, class: 'btn btn-default'%>
-      </div>
-    <div class="submit-field">
-      <%= form.submit "Submit New Story", class: 'btn btn-default'%>
-    </div>
-    <%= link_to "Back to Building", building_path(@building), class: 'btn btn-default' %>
+      <%= form.file_field :img, class: 'file-upload-field'%>
+
+      <%= form.submit "Submit", class: 'btn btn-default sub'%>
+
+    <%= link_to "Back to Building", building_path(@building), class: 'btn btn-default back' %>
 
   </div>
   <% end %>
