--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -11,11 +11,8 @@
       <%= form.hidden_field :user_id, :value => "#{current_user.id}" %>
       <%= form.hidden_field :building_id, :value => @building %>
       <%= form.hidden_field :id, :value => @story.id %>
-
-    <div class='submit-field'>
-      <%= form.submit "Submit Updates", class: 'btn btn-default' %>
-    </div>
-
+      <%= form.submit "Submit Updates", class: 'btn btn-default sub' %>
+      <%= link_to "Cancel", building_path(@building), class: 'btn btn-default back' %>
   </div>
   <% end %>
 </div>
