--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -3,7 +3,7 @@
       <h4><%= @story.title %></h4>
       <p><%= @story.description %></p>
         <% @story.photos.each do |pic| %>
-          <%= image_tag src=pic.img.url(:med), width: '200px'%><br />
+          <%= image_tag pic.img.url(:med), width: '200px'%><br />
         <% end %>
       <%= link_to "Add Photo", new_building_story_photo_path(@building, @story), class: 'btn btn-default pretty-me' %>
       <%= link_to "Back to Building", building_path(@building), class: 'btn btn-default pretty-me' %>
