--- a/app/views/buildings/_card.html.erb
+++ b/app/views/buildings/_card.html.erb
@@ -1,3 +1,5 @@
-<div class="col-xs-10 col-md-4 thumbnail thumbnail-show">
-   <%= image_tag(@building.main_photo, style: 'height:92%; width:100%;') %>
+<div class="col-xs-1"></div>
+<div class="col-xs-4 thumbnail-show">
+   <%= image_tag(@building.main_photo, style: 'height:100%; width:100%;') %>
 </div>
+<div class="col-xs-1"></div>
