--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container-fluid plans">
+  <div class="row topper"></div>
   <div class="row is-flex">
     <div class="col-xs-6 blue">
       <div class="container">
