added topper to form views

--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,4 +1,4 @@
-
+<div class="row topper"></div>
 <div id='edit-story' class='edit-story-container'>
   <%= form_for([@building, @story], method: "patch", action: "update", html: { class: 'form-horizontal col-sm-offset-2 col-sm-8 edit-story-f' } ) do |form| %>
   <div class='edit-story-form col-sm-offset-2 col-sm-8'>
