--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,4 +1,4 @@
-
+<div class="row topper"></div>
 <div id='new-story' class='new-story-container'>
 
   <%= form_for(@story, url: building_stories_path(@building), method: "post", html: { class: 'form-horizontal col-sm-offset-2 col-sm-8 new-story-f' } ) do |form| %>
