--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-
+<div class="row topper"></div>
 <div id='edit-user' class= 'edit-user-container'>
 
   <%= form_for(@user, html: { class: 'form-horizontal col-sm-offset-2 col-sm-8 edit-form-user' }) do |form| %>
