--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 
-
+<div class="row topper"></div>
 <div id='new-user' class='sign-up-container'>
 
 <%= form_for(@user, html: { class: 'form-horizontal col-sm-offset-2 col-sm-8 new-form' }) do |form| %>
